--- a/index.html
+++ b/index.html
@@ -34,20 +34,9 @@
                     <h2>Who are we ?</h2>
                 </section>
 
-                <!-- move somewhere else -->
-                <!--
-                <section data-markdown data-background-color='white'>
-                    ## Cloudflow
-                    ![cloudflow](data/cloudflow.png)
-                </section>
-                -->
-
                 <section data-background="data/slide.png">
                     <section>
                         <h2>What do we do ?</h2>
-                        <aside class="notes">
-                            TODO :
-                        </aside>
                         <ul class="fragment">
                             <li>Environment</li>
                                 <ul>
@@ -110,7 +99,7 @@
                         </ul>
                     </section>
                     <aside class="notes">
-                        OMNI : alerting plugin
+                        OMNI : Metrics alerting plugin
                         Metrics : timeseries database
                     </aside>
                 </section>
@@ -159,6 +148,7 @@
             Reveal.initialize({
                 history: true,
                 slideNumber: 'c/t',
+                pdfSeparateFragments: false,
 
                 // More info https://github.com/hakimel/reveal.js#dependencies
                 dependencies: [
